--- a/README.adoc
+++ b/README.adoc
@@ -9,9 +9,12 @@ image:https://spring.io/badges/spring-data-neo4j/ga.svg[Spring Data Neo4j,link=h
 :groupIdStarter: org.springframework.boot
 :artifactIdStarter: spring-boot-starter-data-neo4j
 
-:neo4j-version: 4.1.5
-:spring-boot-version: 2.6.3
-:spring-data-neo4j-version: 6.2.1
+:docs-neo4j-version: 5.3.0
+:docs-neo4j-docker-version: 5
+:docs-neo4j-4-version: 4.4.16
+:docs-neo4j-3-version: 3.5.23
+:spring-boot-version: 3.0.1
+:spring-data-neo4j-version: 7.0.1
 // end::properties[]
 
 [abstract]
