--- a/src/main/asciidoc/object-mapping/sdn-extensions.adoc
+++ b/src/main/asciidoc/object-mapping/sdn-extensions.adoc
@@ -28,7 +28,7 @@ Additional mixins provided are:
 
 Both the `QuerydslPredicateExecutor` and `CypherdslConditionExecutor` provide the same concept: SDN generates a query, you
 provide "predicates" (Query DSL) or "conditions" (Cypher DSL) that will be added. We recommend the Cypher DSL, as this is
-what SDN 6 uses natively. You might even want to consider using the
+what SDN uses natively. You might even want to consider using the
 http://neo4j-contrib.github.io/cypher-dsl/2021.1.1/#thespringdataneo4j6annotationprocessor[annotation processor] that generates
 a static meta model for you.
 
