--- a/src/main/asciidoc/testing/testing.adoc
+++ b/src/main/asciidoc/testing/testing.adoc
@@ -104,13 +104,13 @@ Also, 4.0 requires JDK 11.
 
 You need the following dependencies to run <<dataneo4jtest-harness35-example>>:
 
-[source,xml]
+[source,xml,subs="verbatim,+attributes"]
 .Neo4j 3.5 test harness dependencies
 ----
 <dependency>
     <groupId>org.neo4j.test</groupId>
     <artifactId>neo4j-harness</artifactId>
-    <version>3.5.23</version>
+    <version>{docs-neo4j-3-version}</version>
     <scope>test</scope>
 </dependency>
 ----
@@ -183,13 +183,13 @@ application properties. We overwrite the corresponding Neo4j settings.
 
 You need the following dependencies to run <<dataneo4jtest-harness40-example>>:
 
-[source,xml]
+[source,xml,subs="verbatim,attributes"]
 .Neo4j 4.x test harness dependencies
 ----
 <dependency>
     <groupId>org.neo4j.test</groupId>
     <artifactId>neo4j-harness</artifactId>
-    <version>{neo4j-version}</version>
+    <version>{docs-neo4j-4-version}</version>
     <scope>test</scope>
     <exclusions>
         <exclusion>
@@ -277,7 +277,7 @@ You need the following dependencies:
 <dependency>
     <groupId>org.testcontainers</groupId>
     <artifactId>neo4j</artifactId>
-    <version>1.14.3</version>
+    <version>1.17.6</version>
     <scope>test</scope>
 </dependency>
 ----
