--- a/src/main/asciidoc/introduction-and-preface/index.adoc
+++ b/src/main/asciidoc/introduction-and-preface/index.adoc
@@ -7,3 +7,5 @@ include::preface-sd.adoc[leveloffset=+1]
 include::preface-sdn.adoc[leveloffset=+1]
 
 include::building-blocks.adoc[leveloffset=+1]
+
+include::new-and-noteworthy.adoc[leveloffset=+1]
