--- a/src/main/antora/modules/ROOT/nav.adoc
+++ b/src/main/antora/modules/ROOT/nav.adoc
@@ -1,5 +1,4 @@
 * xref:introduction-and-preface/index.adoc[]
-// ** xref:commons/upgrade.adoc[]
 ** xref:introduction-and-preface/introduction.adoc[]
 ** xref:introduction-and-preface/preface-neo4j.adoc[]
 ** xref:introduction-and-preface/preface-sd.adoc[]
@@ -7,42 +6,39 @@
 ** xref:introduction-and-preface/building-blocks.adoc[]
 ** xref:introduction-and-preface/new-and-noteworthy.adoc[]
 
+* xref:getting-started.adoc[]
+* xref:object-mapping.adoc[]
+** xref:object-mapping/metadata-based-mapping.adoc[]
+** xref:object-mapping/mapping-ids.adoc[]
+** xref:object-mapping/sdc-object-mapping.adoc[]
 
-// * xref:cassandra.adoc[]
-// ** xref:cassandra/getting-started.adoc[]
-// ** xref:cassandra/configuration.adoc[]
-// ** xref:cassandra/schema-management.adoc[]
-// ** xref:cassandra/cql-template.adoc[]
-// ** xref:cassandra/reactive-cassandra.adoc[]
-// ** xref:cassandra/template.adoc[]
-// ** xref:cassandra/prepared-statements.adoc[]
-// ** xref:object-mapping.adoc[]
-// ** xref:cassandra/converters.adoc[]
-// ** xref:cassandra/events.adoc[]
-// ** xref:cassandra/auditing.adoc[]
-//
-// * xref:repositories.adoc[]
-// ** xref:repositories/core-concepts.adoc[]
-// ** xref:repositories/definition.adoc[]
-// ** xref:cassandra/repositories/repositories.adoc[]
-// ** xref:repositories/create-instances.adoc[]
-// ** xref:repositories/query-methods-details.adoc[]
-// ** xref:cassandra/repositories/query-methods.adoc[]
-// ** xref:repositories/projections.adoc[]
-// ** xref:repositories/custom-implementations.adoc[]
-// ** xref:repositories/core-domain-events.adoc[]
-// ** xref:repositories/null-handling.adoc[]
-// ** xref:cassandra/repositories/cdi-integration.adoc[]
-// ** xref:repositories/query-keywords-reference.adoc[]
-// ** xref:repositories/query-return-types-reference.adoc[]
-//
-// * xref:observability.adoc[]
-//
-// * xref:kotlin.adoc[]
-// ** xref:kotlin/requirements.adoc[]
-// ** xref:kotlin/null-safety.adoc[]
-// ** xref:kotlin/object-mapping.adoc[]
-// ** xref:kotlin/extensions.adoc[]
-// ** xref:kotlin/coroutines.adoc[]
+* xref:repositories.adoc[]
+** xref:repositories/core-concepts.adoc[]
+** xref:repositories/query-methods.adoc[]
+** xref:repositories/definition.adoc[]
+** xref:repositories/query-methods-details.adoc[]
+** xref:repositories/create-instances.adoc[]
+** xref:repositories/custom-implementations.adoc[]
+** xref:repositories/core-domain-events.adoc[]
+** xref:repositories/core-extensions.adoc[]
+** xref:query-by-example.adoc[]
+** xref:repositories/scrolling.adoc[]
+** xref:repositories/sdn-extension.adoc[]
+
+* xref:projections.adoc[]
+** xref:repositories/projections.adoc[]
+** xref:projections/sdn-projections.adoc[]
+
+* xref:testing.adoc[]
+** xref:testing/testing-without-spring-boot.adoc[]
+** xref:testing/testing-with-spring-boot.adoc[]
+
+* xref:auditing.adoc[]
+
+* xref:faq.adoc[]
+
+* xref:appendix.adoc[]
+** xref:repositories/query-keywords-reference.adoc[]
+** xref:repositories/query-return-types-reference.adoc[]
 
 * https://github.com/spring-projects/spring-data-commons/wiki[Wiki]
